--- a/article-test.html
+++ b/article-test.html
@@ -117,16 +117,15 @@
             </a>
         </div>
         <div class="item ">
-            <img src="/images/article_images/golf.jpg">
+            <img src="/images/article_images/funday.jpg">
 
-            <h3>2023 Golf Day</h3>
-            <p>The 16th of May is an important day for our organization. We are hosting a Golf day to raise funds
-                for
-                our cause. Our organization is dedicated to providing a safe and nurturing environment for children
-                who
-                are in need.</p>
+            <h3>Spring Carnival</h3>
+            <p>We're delighted to share the fantastic news: our Spring Carnival was an overwhelming success! The joy,
+                laughter, and camaraderie that filled the air made it a day to remember.
 
-            <a href="golf-day.html" class="link readmore">
+            </p>
+
+            <a href="spring-carnival.html" class="link readmore">
                 <p>Read More </p>
             </a>
         </div>
