--- a/get_involved.html
+++ b/get_involved.html
@@ -100,7 +100,7 @@
             </a>
         </div>
         <div class="item ">
-            <img src="/images/article_images/community.jpg" alt="golf">
+            <img src="/images/article_images/community.jpg" alt="community">
 
             <h3>Making a difference in the community
             </h3>
