--- a/spring-carnival.html
+++ b/spring-carnival.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <title>2023 Golf Day | Heart & Soul Foundation</title>
+    <title>Spring Carnival | Heart & Soul Foundation</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -41,73 +41,44 @@
     </nav>
     <div class="flex-article-test">
         <div class="article-item">
-            <img src="images/article_images/golf.jpg">
+            <img src="images/article_images/funday.jpg">
 
         </div>
 
         <div>
-            <h3>2023 GOLF DAY</h3>
+            <h3>Spring Carnival</h3>
         </div>
 
     </div>
     <div class="article-content">
-        <p>The 16th of May is an important day for our organization. We are hosting a Golf day to raise funds for
-            our cause. Our organization is dedicated to providing a safe and nurturing environment for children who
-            are in need. We believe that every child deserves a chance to learn, grow, and thrive. Unfortunately,
-            many children in our community do not have access to the basic necessities of life, such as food,
-            shelter,
-            and education. This is where our organization comes in. We are committed to providing these children
-            with the support they need to succeed.
-            The Golf day is an important event for us because it will help us to raise the funds we need to pay
-            rent,
-            feed our children three times a day, and provide them with educational supplies. These are basic
-            necessities that many of us take for granted, but for these children, they can make all the difference.
+        <p>We're delighted to share the awesome news: our Spring Carnival was an success! The joy,
+            laughter, and camaraderie that filled the air made it a day to remember.
         </p>
-        <p>With your support, we can ensure that these children have a safe and comfortable place to go, food to
-            eat, and the tools they need to learn and grow.</p>
-        <p>The purpose of this day is to bring people together to support our cause. Golf is a fun and social sport
-            that can be enjoyed by people of all ages and skill levels. By participating in the Golf day, you can
-            have
-            fun while making a difference in the lives of children in need. The funds we raise will go directly to
-            our
-            organization, allowing us to continue providing the support these children need.</p>
-        <p>Golf is a great way to spend time with friends and family while supporting a good cause. Whether you
-            are an experienced golfer or a beginner, there is something for everyone on the golf course. Golf is a
-            sport that requires concentration, skill, and strategy, which makes it both challenging and rewarding.
-            It
-            is also a great way to stay active and enjoy the outdoors.</p>
-        <p>While you are having fun on the golf course, it is important to remember the reason why we are here.
-            Every rand we raise will go towards providing a safe and nurturing environment for children in need. By
-            participating in the Golf day, you are helping to make a difference in the lives of these children.</p>
-        <p>In addition to the satisfaction of knowing that you are making a difference, participating in the Golf
-            day
-            can also be a lot of fun. You can enjoy a beautiful day on the golf course, socialize with friends and
-            family, and take part in a variety of activities and events. The Golf day is a great way to spend time
-            with
-            loved ones while supporting a good cause.</p>
-        <p>So, come out and join us for a day of golf, fun, and fundraising. Together, we can make a difference in
-            the lives of these children and help them to achieve their full potential.</p>
-        <p><strong>Date: 16 May 2023</strong></p>
-        <p><strong>Time: Tee off at 10:30</strong></p>
-        <p><strong>Place: Krugersdorp Golf Club</strong></p>
-        <p><strong>Prices: </strong></p>
-        <ul>
-            <li>R3000 per four-ball</li>
-            <li>R320 per 2-seater golf cart</li>
-            <li>R500 per hole sponsor</li>
-            <li>R1000 hole 9 &amp; 18 sponsor</li>
-        </ul>
-        <p>Dinner and prize giving to take place after the event.</p>
-        <p>Payment confirms your booking. Please use your initials and surname as reference.</p>
+        <p>We want to express our heartfelt gratitude to each and every one of you who joined us in celebrating the
+            season. Your presence added an extra layer of magic to the event.</p>
+
+        <p>As we bid adieu to this year's Spring Carnival, we look forward to more wonderful gatherings in the future.
+            Thank you for making it a memorable day, and we can't wait to see you again soon!</p>
+
         <p><strong>Donations :</strong></p>
-        <p>If you cannot join us for this event, but still want to contribute towards Heart and Soul Foundation, it
-            will be highly appreciated.
-        </p>
         <p><strong>Banking Details :</strong> Heart and Soul Foundation FNB Current Account</p>
         <p><strong>Account Number : </strong>62903485705</p>
         <p><strong>Branch Code :</strong> 250241 </p>
         <p><strong>Contact details :</strong> opperman.estelle@gmail.com</p>
         <p><strong>Chris Opperman :</strong> 072 515 5350</p>
+    </div>
+    <div class="main">
+        <div class="gallery">
+            <div class="gallery__item">
+                <img src="images/gallery_images/18.jpg" id="myImg18" alt="img18">
+            </div>
+            <div class="gallery__item">
+                <img src="images/gallery_images/24.jpg" id="myImg24" alt="img24">
+            </div>
+            <div class="gallery__item">
+                <img src="images/gallery_images/35.jpg" id="myImg35" alt="img35">
+            </div>
+        </div>
     </div>
     <h2 class="article-heading-how-we-help-children"><span class="u">ALSO IN </span>THIS SECTION</h2>
     <div class="flex-container-one">
@@ -140,17 +111,16 @@
             </a>
         </div>
         <div class="item ">
-            <img src="/images/article_images/golf.jpg" alt="golf">
+            <img src="/images/article_images/community.jpg">
 
-            <h3>2023 Golf Day</h3>
-            <p>The 16th of May is an important day for our organization. We are hosting a Golf day to raise funds
-                for
-                our cause. Our organization is dedicated to providing a safe and nurturing environment for children
-                who
-                are in need.</p>
-
-            <a href="golf-day.html" class="link readmore">
+            <h3>Making a difference in the community</h3>
+            <p>At our charity organization, we are passionate about creating positive change in our local
+                community.
+                Through our programs and services, we strive to make a ...</p>
+            <a href="communities.html" class="link readmore">
                 <p>Read More </p>
+            </a>
+
             </a>
         </div>
 
@@ -196,7 +166,92 @@
 
 
         </div>
+        <div id="myModal18" class="modal bg">
 
+            <!-- Modal content IMAGE -->
+            <div class="modal-content">
+                <span class="close18">&times;</span>
+                <img src="images/gallery_images/18.jpg" alt="img18">
+
+            </div>
+        </div>
+        <div id="myModal24" class="modal bg">
+
+            <!-- Modal content IMAGE -->
+            <div class="modal-content">
+                <span class="close24">&times;</span>
+                <img src="images/gallery_images/24.jpg" alt="img24">
+
+            </div>
+        </div>
+        <div id="myModal35" class="modal bg">
+
+            <!-- Modal content IMAGE -->
+            <div class="modal-content">
+                <span class="close35">&times;</span>
+                <img src="images/gallery_images/35.jpg" alt="img35">
+
+            </div>
+        </div>
     </footer>
+    <script>
+
+
+        var modal18 = document.getElementById("myModal18");
+        var modal24 = document.getElementById("myModal24");
+        var modal35 = document.getElementById("myModal35");
+
+        var img18 = document.getElementById("myImg18");
+        var img24 = document.getElementById("myImg24");
+        var img35 = document.getElementById("myImg35");
+
+
+        var span18 = document.getElementsByClassName("close18")[0];
+        var span24 = document.getElementsByClassName("close24")[0];
+        var span35 = document.getElementsByClassName("close35")[0];
+
+
+        img18.onclick = function () {
+            modal18.style.display = "block";
+        }
+
+        img24.onclick = function () {
+            modal24.style.display = "block";
+        }
+
+        img35.onclick = function () {
+            modal35.style.display = "block";
+        }
+
+
+        span18.onclick = function () {
+            modal18.style.display = "none";
+
+        }
+
+        span24.onclick = function () {
+            modal24.style.display = "none";
+
+        }
+        span35.onclick = function () {
+            modal35.style.display = "none";
+
+        }
+
+
+        window.onclick = function (event) {
+            if (event.target == modal18) {
+                modal18.style.display = "none";
+            }
+            else if (event.target == modal24) {
+                modal24.style.display = "none";
+            }
+            else if (event.target == modal35) {
+                modal35.style.display = "none";
+            }
+        }
+
+        //tthis is test code
+    </script>
     <script src="app.js"></script>
 </body>
