--- a/food-donations.html
+++ b/food-donations.html
@@ -106,7 +106,7 @@
             </a>
         </div>
         <div class="item ">
-            <img src="/images/article_images/community.jpg" alt="golf">
+            <img src="/images/article_images/community.jpg" alt="community">
 
             <h3>Making a difference in the community</h3>
             <p>At our charity organization, we are passionate about creating positive change in our local community.
